Added IQv2 information updated IQ related integration tests